[package]
name = "api-client"
version = "0.1.7"
authors = ["John Peel <john@dgby.org>", "Peanutbother <peanutbother@proton.me>"]
edition = "2021"
description = "Provides a macro for quickly creating REST api client structs"
repository = "https://github.com/peanutbother/api-client/"
license = "MIT"
readme = "README.md"
rust-version = "1.56"

[features]
default = ["json", "multipart"]
json = ["reqwest/json"]
multipart = ["reqwest/multipart"]
middleware = ["reqwest-middleware"]

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.11", default-features = false }
serde = { version = "1.0", default-features = false }
reqwest-middleware = { version = "0.2.1", optional = true }

[dev-dependencies]
bytes = { version = "1.4.0" }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
tokio-test = "0.4"
tokio = { version = "1.26.0", features = ["full"] }
